# hestia-2.0

./: .gitmodules  README.md
hestia-backend/: Dockerfile  README.md  Regras para a Criação Rotina.md  docker-compose.yml  index.js  nodemon.json  package-lock.json  package.json  railway.toml
hestia-backend/config/: db.js
hestia-backend/controllers/: activitiesController.js  actuatorsController.js  (+8 more)
hestia-backend/hestia-sim/: README.md  data_generator.py  data_transformer.py  join_routines.py  main.py  menu.py  proba_routine_merger.py  pyproject.toml  requirements.txt
hestia-backend/hestia-sim/doc/: Cenario_validacao_Artigo(1usuarios-casa-mayki).md  Grafo_casa-ROTINA_SIMPLES(2usuarios).md  Grafo_casa-ROTINA_SIMPLES(Dividindo_ap).md  Grafo_teste-grupo(3usuarios).md
hestia-backend/hestia-sim/rotinas/: Cenario_argus(1usuario).json  Cenario_validacao_Artigo(1usuarios-casa-mayki).json  Grafo_casa-GRUPO(3usuarios).json  Grafo_casa-ROTINA_SIMPLES(Dividindo_ap).json  Grafo_casa02-ROTINA_SIMPLES(2usuarios).json
hestia-backend/hestia-sim/simulador/: atividade.py  atuador.py  automacao.py  comodo.py  montador.py  usuario.py
hestia-backend/hestia-sim/simulador/devices/actions/: CoffeeMachine.py  DeviceBase.py  LightBulbAction.py  MovimentSensorAction.py  Plug.py  SensorBase.py  Sound.py  SplitAir.py  Tv.py
hestia-backend/hestia-sim/simulador/helps/: converter.py  gravar_dados.py  status.py  tempo.py  usuarios_help.py
hestia-backend/hestia-sim/temporario/: temp_1771356265673.json
hestia-frontend/: .env.example  README.md  index.html  package-lock.json  package.json
(+87 files in other folders)
