[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hestia"
version = "0.1.0"
description = ""
authors = [
  { name = "mayki", email = "maykioliveira@ufba.br" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.2",
  "numpy>=2.1.1",
  "simpy>=4.1.1",
  "simple-term-menu>=1.6.4",
  "matplotlib>=3.9.2",
  "seaborn>=0.13.2",
  "scipy>=1.14.1",
  "networkx>=3.4.2",
  "matplotlib-inline>=0.1.7",
  "notebook>=7.3.1",
  "xlsxwriter>=3.2.0"
]

[tool.setuptools]
packages = ["simulador"]